aws/dsba/walt-id-packetdelivery/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: waltid-packetdelivery
spec:
  type: ClusterIP
  ports:
    - name: http-core
      port: 7000
      targetPort: core-api
      protocol: TCP
    - name: http-signatory
      port: 7001
      targetPort: signatory-api
      protocol: TCP
    - name: http-custodian
      port: 7002
      targetPort: custodian-api
      protocol: TCP
    - name: http-auditor
      port: 7003
      targetPort: auditor-api
      protocol: TCP
    - name: http-essif
      port: 7004
      targetPort: essif-api
      protocol: TCP
  selector:
    app: waltid-packetdelivery
