aws/dsba/walt-id-packetdelivery/route-custodian.yaml

apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: packetdelivery-custodian
spec:
  port:
    targetPort: 7002
  tls:
    termination: edge
  to:
    kind: Service
    name: waltid-packetdelivery
