aws/dsba/walt-id-packetdelivery/route-essif.yaml

apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: packetdelivery-essif
spec:
  port:
    targetPort: 7004
  tls:
    termination: edge
  to:
    kind: Service
    name: waltid-packetdelivery
