aws/dsba/walt-id-packetdelivery/route-signatory.yaml

apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: waltid-signatory
spec:
  port:
    targetPort: 7001
  tls:
    termination: edge
  to:
    kind: Service
    name: waltid-happypets
